--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
          <div id="account-btn" class="fas fa-user"></div>
          <a href="./public/cuaca.html">
             <div id="account-btn" class="fas fa-cloud " data-bs-toggle=" tooltip data-bs-placement=" bottom"
-               title="Lihat cuaca" style=" color: #00cccc;"></div>
+               title="Lihat cuaca" style=" color: #0eb582;"></div>
          </a>
          <div id="menu-btn" class="fas fa-bars"></div>
       </div>
@@ -120,7 +120,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
          <div class="swiper-wrapper">
 
-            <section class="swiper-slide slide" style="background: url(images/aku3.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/jumbotrton_3.jpg) no-repeat;">
                <div class="content">
                   <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
                   <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
@@ -129,7 +129,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                </div>
             </section>
 
-            <section class="swiper-slide slide" style="background: url(images/aku2.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/Jumbotron_1.jpg) no-repeat;">
                <div class="content">
                   <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
                   <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
@@ -138,7 +138,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                </div>
             </section>
 
-            <section class="swiper-slide slide" style="background: url(images/aku1.jpg) no-repeat;">
+            <section class="swiper-slide slide" style="background: url(images/jumbottron_5.jpg) no-repeat;">
                <div class="content">
                   <h3>Blog terbaik yang akan Anda temukan di sini!</h3>
                   <p>Mari berlajar di website NasWeb, gratiss tanpa di pungut biaya, dengan penjelasan yang mudah
@@ -168,7 +168,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="box">
                <a href="./public/blog.html">
-                  <img src="images/cisco1.png" alt="">
+                  <img src="images/cisco_thumb.gif" alt="">
                   <h3>Cisco packet Tracer</h3>
                   <p>5 modules</p>
                </a>
@@ -189,7 +189,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </div>
 
             <div class="box">
-               <img src="images/cyber4.png" alt="">
+               <img src="images/cyber5.gif" alt="">
                <h3>Cyber Scurity</h3>
                <p>10 modules</p>
             </div>
