--- a/public/contact.html
+++ b/public/contact.html
@@ -164,7 +164,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             <input type="email" placeholder="email" class="box" name="email">
             <input type="number" placeholder="phone" class="box" name="telpon">
             <textarea name="pesan" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <button type="submit" value="send message" class="btn btn-kirim anim-text">KIRIM</button>
+            <button type="submit" value="send message" class="btn btn-kirim ">KIRIM</button>
 
             <button class="btn btn-success btn-loading d-none" type="button" disabled>
                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
