--- a/public/videocisco.html
+++ b/public/videocisco.html
@@ -154,8 +154,9 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
             </div>
 
             <div class="list">
-                <video src="images/vid-6.mp4" class="list-video"></video>
-                <h3 class="list-title">dalam pengembangan...</h3>
+                <video src="../images/3 router 3 switch.mp4" class="list-video"></video>
+                <h3 class="list-title">Konfigurasi 3 Router 3 Switch (UJIKOM) <br> PENTINGG !!!! <br> Router nya
+                    menggunakan " PT-ROUTER "</h3>
             </div>
 
             <div class="list">
