--- a/public/cisco.html
+++ b/public/cisco.html
@@ -201,6 +201,18 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="accordion">
                 <div class="accordion-heading">
+                    <h3>Cara CHEAT QUIZIZZ</h3>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+                <p class="accordion-content">
+                    Cara mengetahui jawaban pada quizizz <br>
+                    <button type="button" style="background-color: #0eb582;; border-radius: 5px; padding: 10px;"><a
+                            href="./maunyariapa.html" style="color: #fff;">Klik disini</a></button>
+                </p>
+            </div>
+
+            <div class="accordion">
+                <div class="accordion-heading">
                     <h3>Apa Karir Terbaik Di Tahun 2022?</h3>
                     <i class="fas fa-angle-down"></i>
                 </div>
@@ -256,18 +268,6 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                     Cara mengkonfigurasi Mikrotik VLAN dengan menggunakan Software WinBox <br>
                     <button type="button" style="background-color: #0eb582;; border-radius: 5px; padding: 10px;"><a
                             href="./mikrotik_1.html" style="color: #fff;">Klik disini</a></button>
-                </p>
-            </div>
-
-            <div class="accordion">
-                <div class="accordion-heading">
-                    <h3>Cara CHEAT QUIZIZZ</h3>
-                    <i class="fas fa-angle-down"></i>
-                </div>
-                <p class="accordion-content">
-                    Cara mengetahui jawaban pada quizizz <br>
-                    <button type="button" style="background-color: #0eb582;; border-radius: 5px; padding: 10px;"><a
-                            href="./cheatQuizizz.html" style="color: #fff;">Klik disini</a></button>
                 </p>
             </div>
 
