--- a/home.html
+++ b/home.html
@@ -231,7 +231,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-1.png" alt="">
+                     <img src="images/home 1-1.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
@@ -243,7 +243,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-2.png" alt="">
+                     <img src="images/home 2-2.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
@@ -255,7 +255,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-3.png" alt="">
+                     <img src="images/home 3-3.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
@@ -267,7 +267,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-4.png" alt="">
+                     <img src="images/home 4-4.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
@@ -279,7 +279,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-5.png" alt="">
+                     <img src="images/home 5-5.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
@@ -291,7 +291,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
                <div class="swiper-slide slide">
                   <div class="image">
-                     <img src="images/course-1-6.png" alt="">
+                     <img src="images/home 6-6.png" alt="">
                      <h3>web development</h3>
                   </div>
                   <div class="content">
