--- a/public/about.html
+++ b/public/about.html
@@ -128,8 +128,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
       <div class="popup-img">
          <span style="cursor: pointer;">&times;</span>
          <img src="../images/saya.jpg" alt="" onclick="myfunction()">
-         <span
-            style="font-size: 25px; text-align: center; margin-top: 100px; margin-right: 100px; color: darkgoldenrod;"
+         <span style="font-size: 25px; text-align: center; margin-top: 25px; margin-right: 100px; color: darkgoldenrod;"
             id="ganteng">Lumayan
             lah..</span>
       </div>
