menambahkan file php

--- a/public/about.html
+++ b/public/about.html
@@ -110,7 +110,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <section class="heading-link">
       <h3>about us</h3>
-      <p> <a href="../home.html">home</a> / about </p>
+      <p> <a href="../index.html">home</a> / about </p>
    </section>
 
    <!-- about section starts  -->
@@ -306,7 +306,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="../home.html" class="link">home</a>
+            <a href="../index.html" class="link">home</a>
             <a href="../public/about.html" class="link">about</a>
             <a href="../public/blog.html" class="link">blog</a>
             <a href="../public/contact.html" class="link">contact</a>
