--- a/public/cuaca.html
+++ b/public/cuaca.html
@@ -59,7 +59,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html" class="anim-text">home</a>
+            <a href="../index.html" class="anim-text">home</a>
             <a href="about.html" class="anim-text">about</a>
             <a href="blog.html" class="anim-text">blog</a>
             <a href="contact.html" class="anim-text">contact</a>
@@ -151,7 +151,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
         </div>
     </div>
 
-    <p style="padding: 20px;"> <a href="../home.html"> <button type="button"
+    <p style="padding: 20px;"> <a href="../index.html"> <button type="button"
                 style="padding:10px; background-color: coral; color: white; border-radius: 5px ; font-size: 12px;"> <i
                     class="fas fa-chevron-left"></i> Back</button></a>
     </p>
@@ -183,7 +183,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html" class="link">home</a>
+                <a href="../index.html" class="link">home</a>
                 <a href="./public/about.html" class="link">about</a>
                 <a href="./public/blog.html" class="link">blog</a>
                 <a href="./public/contact.html" class="link">contact</a>
