--- a/public/cyberscurity.html
+++ b/public/cyberscurity.html
@@ -30,7 +30,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CISCO</title>
+    <title>CyberScurity</title>
 
     <link rel="icon" href="../images/linux-hero.png">
     <!-- font awesome cdn link  -->
@@ -61,7 +61,9 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
         </nav>
 
         <div class="icons">
-            <div id="account-btn" class="fas fa-user"></div>
+            <a href="../home.php">
+                <div id="account-btn" class="fas fa-user"></div>
+            </a>
             <div id="menu-btn" class="fas fa-bars"></div>
         </div>
 
@@ -104,80 +106,190 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <!-- header section ends -->
 
-    <section class="heading-link">
-        <h3>CISCO</h3>
-        <p> <a href="../index.html">home</a> / cisco </p>
+    <section class="heading-link1">
+        <h3>CyberScurity</h3>
+        <p> <a href="../index.html">home</a> / CyberScurity </p>
     </section>
 
     <!-- contact section starts  -->
 
     <div class="warna1">
+        <section class="about">
+            <div class="content">
+                <p class="pembukaan" style="padding: 20px;">Pertama tama sebelum kalian pelajari lebih lanjut tentang
+                    dunia CYBER
+                    di NasWeb kalian terlebih
+                    dahulu harus paham basic nya tentang CyberScurity. setelah kalian telah mempelajari sedikit , kalian
+                    langsung saja download OS (operating system) seperti : KaliLinux, ParrotOS, Garuda Linux, BlackArch,
+                    BackBox, dll... .
+                    <br>
+                    <br>
+                    Jika kalian tidak tahu bagaimana cara penginstalan nya , di NasWeb telah menyediakan cara
+                    penginstalan OS KaliLinux silahka di cek Guysss.... Happy hacking
+                </p>
+            </div>
+        </section>
         <section class="contact">
-            <p style="text-align: center; color: red; font-size: 20px;">*DISARANKAN MENGGUNAKAN CISCO VERSI > 7.2* </p>
             <h1 class="heading"> Pilih Tipe </h1>
 
             <div class="icons-container">
 
                 <div class="icons" style="border-radius: 20px;">
                     <div class="gambar">
-                        <img src="../images/topologi.png" alt="" style="width: 220px; border-radius: 20px;">
+                        <img src="../images/install kalilinux.jpg" alt="" style="width: 100%; border-radius: 20px;">
                     </div>
-                    <h3>1 ROUTER </h3>
-                    <h3>1 SWITCH</h3>
-                    <h3>2pc</h3>
+                    <h3>Penginstalaan</h3>
+                    <h3>KaliLinux</h3>
                     <a href="../public/1router.html"><button type="button"
                             style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
 
                 <div class="icons" style="border-radius: 20px;">
                     <div class="gambar">
-                        <img src="../images/topologi4.png" alt=""
-                            style="width: 220px; height: 180px; border-radius: 20px;">
+                        <img src="../images/root-kali.jpg" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
                     </div>
-                    <h3>2 ROUTER</h3>
-                    <h3>4 SWITCH</h3>
-                    <h3>8 PC</h3>
+                    <h3>Cara masuk root </h3>
+                    <h3>di KaliLinux</h3>
                     <a href="../public/2router.html"><button type="button"
                             style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
 
                 <div class="icons" style="border-radius: 20px;">
                     <div class="gambar">
-                        <img src="../images/topologi5.png" alt=""
-                            style="width: 220px; height: 180px; border-radius: 20px;">
+                        <img src="../images/ngrok-setting.jpg" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
                     </div>
-                    <h3>3 ROUTER </h3>
-                    <h3>6 SWITCH</h3>
-                    <h3>12 PC</h3>
+                    <h3>Setting Ngrok</h3>
                     <a href="../public/3router.html"><button type="button"
                             style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
                 <div class="icons" style="border-radius: 20px;">
                     <div class="gambar">
-                        <img src="../images/vlan1.png" alt="" style="width: 220px; height: 180px; border-radius: 20px;">
+                        <img src="../images/Keylogger.jpeg" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
                     </div>
-                    <h3>VLAN </h3>
-                    <h3>1 SWITCH</h3>
+                    <h3>Setting KeyLooger</h3>
                     <a href="../public/vlan1.html"><button type="button"
                             style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
                 <div class="icons" style="border-radius: 20px;">
                     <div class="gambar">
-                        <img src="../images/serverDHCP.png" alt=""
+                        <img src="../images/wordlist1.png" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara membuat </h3>
+                    <h3>Wordlist</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/metasploit.jpg" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara membuat </h3>
+                    <h3>File Backdoor</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/njrat.png" alt="" style="width: 100%; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara membuat </h3>
+                    <h3>virus</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/lacakfoto.jpg" alt=""
+                            style="width: 100%; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara melacak file </h3>
+                    <h3>Lokasi foto</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+
+                <!-- foto dihilangkan  -->
+                <!-- <div class="hilang" id="tampil"> -->
+                <!-- <div class="icons-container"> -->
+                <div class="icons " style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/lacak-username.png" alt=""
                             style="width: 220px; height: 180px; border-radius: 20px;">
                     </div>
-                    <h3>1 SERVER </h3>
-                    <h3>1 SWITCH</h3>
-                    <h3>3 PC</h3>
+                    <h3>Cara melacak Username </h3>
+                    <h3>media Social</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/osintgram.jpg" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>melihat informasi </h3>
+                    <h3>user instagram</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/phising.png" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara melakukan </h3>
+                    <h3>Phising</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/burpsuite.png" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara melakukan hack password </h3>
+                    <h3>menggunakan burpsuite</h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/seeker.jpg" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara melacak lokasi </h3>
+                    <a href="../public/1server.html"><button type="button"
+                            style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
+                </div>
+                <div class="icons" style="border-radius: 20px;">
+                    <div class="gambar">
+                        <img src="../images/aircrack-ng.jpg" alt=""
+                            style="width: 220px; height: 180px; border-radius: 20px;">
+                    </div>
+                    <h3>Cara mendapatkan <br> password tetangga</h3>
                     <a href="../public/1server.html"><button type="button"
                             style="padding: 10px; background-color: #0eb582; color: white; margin-top: 5px;">Buka</button></a>
                 </div>
             </div>
-            <marquee direction="left"
-                style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
-                HARUS SEMANGAT BROO, JANGAN LEMES
-            </marquee>
-        </section>
+    </div>
+    </div>
+
+
+    <!-- 
+    <div class="load-more" onclick="myfunction()">
+        <div class="btn">load more</div>
+    </div> -->
+
+
+    <marquee direction="left"
+        style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        Anjay mau jadi hangker 👊😎
+    </marquee>
+    </section>
     </div>
     <!-- switch ke video -->
 
@@ -346,6 +458,12 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <!-- custom js file link  -->
     <script src="../js/script.js"></script>
+
+    <script>
+        function myfunction() {
+            document.getElementById("tampil").style.display = 'block'
+        }
+    </script>
 
 </body>
 
