--- a/public/excel.html
+++ b/public/excel.html
@@ -54,7 +54,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html" class="anim-text">home</a>
+            <a href="../index.html" class="anim-text">home</a>
             <a href="./about.html" class="anim-text">about</a>
             <a href="../public/blog.html" class="anim-text">blog</a>
             <a href="../public/contact.html" class="anim-text">contact</a>
@@ -106,7 +106,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <section class="heading-link">
         <h3>EXCEL</h3>
-        <p> <a href="../home.html">home</a> / excel </p>
+        <p> <a href="../index.html">home</a> / excel </p>
     </section>
 
     <!-- contact section starts  -->
@@ -286,7 +286,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="../home.html" class="link">home</a>
+                <a href="../index.html" class="link">home</a>
                 <a href="../public/about.html" class="link">about</a>
                 <a href="../public/blog.html" class="link">courses</a>
                 <a href="../public/contact.html" class="link">contact</a>
