--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="home.html" class="anim-text">home</a>
+         <a href="index.html" class="anim-text">home</a>
          <a href="./public/about.html" class="anim-text">about</a>
          <a href="./public/blog.html" class="anim-text">blog</a>
          <a href="./public/contact.html" class="anim-text">contact</a>
@@ -476,7 +476,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="home.html" class="link">home</a>
+            <a href="index.html" class="link">home</a>
             <a href="./public/about.html" class="link">about</a>
             <a href="./public/blog.html" class="link">blog</a>
             <a href="./public/contact.html" class="link">contact</a>
