--- a/public/blog.html
+++ b/public/blog.html
@@ -54,7 +54,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <nav class="navbar ">
          <div id="close-navbar" class="fas fa-times"></div>
-         <a href="../home.html" class="anim-text">home</a>
+         <a href="../index.html" class="anim-text">home</a>
          <a href="../public/about.html" class="anim-text">about</a>
          <a href="../public/blog.html" class="anim-text">blog</a>
          <a href="../public/contact.html" class="anim-text">contact</a>
@@ -110,7 +110,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <section class="heading-link">
       <h3>our Blog</h3>
-      <p> <a href="../home.html">home</a> / Blog </p>
+      <p> <a href="../index.html">home</a> / Blog </p>
    </section>
 
    <div class="warna">
@@ -184,7 +184,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
                   <p>Keamanan komputer atau keamanan digital merupakan keamanan informasi yang terdapat pada komputer
                      atau
                      jaringan. Keamanan komputer juga dikenal dengan sebutan cybersecurity atau IT security.</p>
-                  <a href="#" class="btn">read more</a>
+                  <a href="../login.php" class="btn">read more</a>
                   <div class="icons">
                      <span> <i class="fas fa-user"></i> Ignasius </span>
                      <span> <i class="fas fa-clock"></i> 6 hours </span>
@@ -315,7 +315,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="../home.html" class="link">home</a>
+            <a href="../index.html" class="link">home</a>
             <a href="../public/about.html" class="link">about</a>
             <a href="../public/blog.html" class="link">blog</a>
             <a href="../public/contact.html" class="link">contact</a>
