--- a/public/contact.html
+++ b/public/contact.html
@@ -59,7 +59,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
       <nav class="navbar">
          <div id="close-navbar" class="fas fa-times anim-text"></div>
-         <a href="../home.html" class="anim-text">home</a>
+         <a href="../index.html" class="anim-text">home</a>
          <a href="../public/about.html" class="anim-text">about</a>
          <a href="../public/blog.html" class="anim-text">Blog</a>
          <a href="../public/contact.html" class="anim-text">contact</a>
@@ -115,7 +115,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
    <section class="heading-link">
       <h3>contact us</h3>
-      <p> <a href="../home.html">home</a> / contact </p>
+      <p> <a href="../index.html">home</a> / contact </p>
    </section>
 
    <!-- contact section starts  -->
@@ -221,7 +221,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
          <div class="box">
             <h3>quick links</h3>
-            <a href="../home.html" class="link">home</a>
+            <a href="../index.html" class="link">home</a>
             <a href="../public/about.html" class="link">about</a>
             <a href="../public/blog.html" class="link">blog</a>
             <a href="../public/contact.html" class="link">contact</a>
