--- a/public/rumusexcel.html
+++ b/public/rumusexcel.html
@@ -55,7 +55,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="../home.html" class="anim-text">home</a>
+            <a href="../index.html" class="anim-text">home</a>
             <a href="../public/about.html" class="anim-text">about</a>
             <a href="../public/blog.html" class="anim-text">blog</a>
             <a href="../public/contact.html" class="anim-text">contact</a>
@@ -107,7 +107,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
     <section class="heading-link">
         <h3>PENGENALAN <br> RUMUS <br> MS.EXCEL</h3>
-        <p> <a href="../public/excel.html">Back</a> / cisco </p>
+        <p> <a href="../public/excel.html">Back</a> / excel</p>
     </section>
 
     <!-- about section starts  -->
@@ -305,7 +305,7 @@ SELAMAT BELAJAR, JANGAN JADI ORANG BIASA !!! HUSST JANGAN BILANG BILANG UDAH LIA
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html" class="link">home</a>
+                <a href="../index.html" class="link">home</a>
                 <a href="about.html" class="link">about</a>
                 <a href="courses.html" class="link">courses</a>
                 <a href="contact.html" class="link">contact</a>
